--- a/fastlane/.env.default
+++ b/fastlane/.env.default
@@ -8,7 +8,7 @@ VERSION=1.0.0
 # Signing Info
 BUNDLE_ID=com.ayush.fastlanedemo
 CERTIFICATE=iPhone Distribution: FastlaneDemo
-PROVISIONING_PROFILE=aaaaaaa-1111-1111-aaaa-aaaaaaaaaaaa # Optional
+# PROVISIONING_PROFILE=aaaaaaa-1111-1111-aaaa-aaaaaaaaaaaa # Optional
 
 # HockeyApp
 HOCKEY_API_TOKEN=
